# align_ir_rgb

./: CMakeLists.txt  align_ir_rgb_g2o.cc  align_ir_rgb_g2o.h
include/align_ir_rgb/: align_ir_rgb_g2o.h  tools.h
scripts/: draw.ipynb  param.txt
src/: align_ir_rgb_g2o.cc  test_files_reading.cc  tools.cc
